--- a/SetepassosPRJ/Views/Shared/_Layout.cshtml
+++ b/SetepassosPRJ/Views/Shared/_Layout.cshtml
@@ -30,10 +30,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Apresentacao">Apresentação</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="HiScores">Hi-Scores</a></li>
-                    <li><a asp-area="" asp-controller="Jogo" asp-action="Index">Novo Jogo</a></li>
+                    <li><a asp-area="" asp-controller="Jogo" asp-action="CriarJogo">Novo Jogo</a></li>
                 </ul>
             </div>
         </div>
