--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -1,11 +1,28 @@
 ﻿@model SetepassosPRJ.Models.Perfil
 @{
 }
+
 <form asp-action="CriarJogo" method="post">
     <div asp-validation-summary="All"></div>
     <div class="form-group">
         <label asp-for="Nome">Nome</label>
         <input class="form-control" asp-for="Nome" />
+    </div>
+    <div class="form-group">
+        <label>
+            <input type="radio" name="test" value="Nerd" checked>
+            <img src="~/images/NerdMiniatura.png">
+        </label>
+
+        <label>
+            <input type="radio" name="test" value="Fat">
+            <img src="~/images/FatMiniatura.png">
+        </label>
+
+        <label>
+            <input type="radio" name="test" value="OldWoman">
+            <img src="~/images/OldWomanMiniatura.png">
+        </label>
     </div>
     <div>
         <button type="submit">Iniciar Jogo</button>
@@ -13,3 +30,4 @@
 
 
 </form>
+
