--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -5,7 +5,7 @@
 <form asp-action="CriarJogo" method="post">
     <div asp-validation-summary="All"></div>
     <div class="form-group">
-        <label asp-for="Nome">Nome</label>
+        <label asp-for="Nome">Nome </label>
         <input class="form-control" asp-for="Nome" />
     </div>
     <div class="form-group">
@@ -25,7 +25,7 @@
         </label>
     </div>
     <div>
-        <button type="submit">Iniciar Jogo</button>
+        <button type="submit" class="btn-primary">Iniciar Jogo</button>
     </div>
 
 
