--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -1,10 +1,22 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
+    background: url(../images/Entrance.jpg);
     padding-top: 50px;
     padding-bottom: 20px;
+    color: ghostwhite;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 
+label {
+    color: ghostwhite;
+    font-weight: bold;
+    padding: 4px;
+    text-transform: uppercase;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
 
 #bg {
     position: fixed;
