Adicionado a propriedade tipo de perfil ao modelo

--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -7,6 +7,9 @@
 </div>
 
 <div>
+    <strong>Perfil: </strong>@Model.PerfilTipo
+</div>
+<div>
     <strong>Moedas de Ouro: </strong>@Model.MoedasOuro
 </div>
 
