--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -10,22 +10,22 @@
     </div>
     <div class="form-group">
         <label>
-            <input type="radio" name="test" value="Nerd" checked>
+            <input class="form-control" type="radio" asp-for="PerfilTipo" value="Nerd" checked>
             <img src="~/images/NerdMiniatura.png">
         </label>
 
         <label>
-            <input type="radio" name="test" value="Fat">
+            <input class="form-control" type="radio" asp-for="PerfilTipo" value="Fat" checked>
             <img src="~/images/FatMiniatura.png">
         </label>
 
         <label>
-            <input type="radio" name="test" value="OldWoman">
+            <input class="form-control" type="radio" asp-for="PerfilTipo" value="Old" checked>
             <img src="~/images/OldWomanMiniatura.png">
         </label>
     </div>
     <div>
-        <button type="submit" class="btn-primary">Iniciar Jogo</button>
+        <button type="submit" class="btn-primary" value="CriarJogo.teste">Iniciar Jogo</button>
     </div>
 
 
