Alteraçoes no trabalho

--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -1,17 +1,132 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "HiScores";
 }
-<h2>@ViewData["Title"]</h2>
-
-
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+    <div class="text-center">
+        <table id="tabela" class="table table-bordered">
+            <thead>
+                <tr>
+                    <th class="text-center" scope="col">Nome Jogador</th>
+                    <th class="text-center" scope="col">Pontuação (Moedas de Ouro)</th>
+                    <th class="text-center" scope="col">Resultado Final</th>
+                    <th class="text-center" scope="col">Chave Encontrada?</th>
+                    <th class="text-center" scope="col">Inimigos Derrotados</th>
+                    <th class="text-center" scope="col">Fugas do Inimigo</th>
+                    <th class="text-center" scope="col">Áreas Investigadas</th>
+                    <th class="text-center" scope="col">Itens Encontrados</th>
+                    <th class="text-center" scope="col">Poções Usadas/Totais</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr id="1" class="classe1">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr id="2" class="classe1">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr id="3" class="classe1">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr class="classe2">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr class="classe2">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr class="classe2">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr class="classe2">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr class="classe2">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr class="classe2">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+                <tr class="classe2">
+                    <td>José</td>
+                    <td>3500</td>
+                    <td>Vitória</td>
+                    <td>Sim</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
