--- a/SetepassosPRJ/Views/Home/Apresentacao.cshtml
+++ b/SetepassosPRJ/Views/Home/Apresentacao.cshtml
@@ -1,7 +1,43 @@
 ﻿@{
     ViewData["Title"] = "Apresentacao";
 }
-<h2>@ViewData["Title"]</h2>
+<div id="text"></div>
 
-
-<p>Use this area to provide additional information.</p>
+<div id="carousel-example-captions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-example-captions" data-slide-to="0" class=""></li>
+        <li class="" data-target="#carousel-example-captions" data-slide-to="1"></li>
+        <li class="active" data-target="#carousel-example-captions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="item">
+            <img data-holder-rendered="true" src="~/images/OldWomanMiniatura.png" data-src="holder.js/900x500/auto/#777:#777" alt="500x500">
+            <div class="carousel-caption">
+                <h3>First slide label</h3>
+                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            </div>
+        </div>
+        <div class="item">
+            <img data-holder-rendered="true" src="~/images/NerdMiniatura.png" data-src="holder.js/900x500/auto/#666:#666" alt="500x500">
+            <div class="carousel-caption">
+                <h3>Second slide label</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+        </div>
+        <div class="item active">
+            <img data-holder-rendered="true" src="~/images/FatMiniatura.png" data-src="holder.js/900x500/auto/#555:#555" alt="500x500">
+            <div class="carousel-caption">
+                <h3>Third slide label</h3>
+                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            </div>
+        </div>
+    </div>
+    <a class="left carousel-control" href="#carousel-example-captions" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-captions" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
