--- a/SetepassosPRJ/Views/Home/Index.cshtml
+++ b/SetepassosPRJ/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <h1>Do It!</h1>
+<h1>Do It!</h1>
 
-
+<a asp-controller="Jogo" asp-action="CriarJogo" class="btn btn-primary" role="button">Iniciar novo jogo</a>
 
