--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -2,37 +2,40 @@
 @{
 }
 
-<div>
-    <strong>Nome: </strong>@Model.Nome
+<div class="dados">
+    <div>
+        <strong>Nome: </strong>@Model.Nome
+    </div>
+
+    <div>
+        <strong>Perfil: </strong>@Model.PerfilTipo
+    </div>
+    <div>
+        <strong>Moedas de Ouro: </strong>@Model.MoedasOuro
+    </div>
+
+    <div>
+        <strong>Pontos de Vida: </strong>@Model.PontosVida
+    </div>
+
+    <div>
+        <strong>Pontos de Ataque:</strong>@Model.PontosAtaque
+    </div>
+
+    <div>
+        <strong>Pontos de Sorte: </strong>@Model.PontosSorte
+    </div>
+
+    <div>
+        <strong>Poções de Vida: </strong>@Model.PocoesVida
+    </div>
+
+    <div>
+        <strong>Chave?: </strong>@Model.Chave
+    </div>
 </div>
 
-<div>
-    <strong>Perfil: </strong>@Model.PerfilTipo
-</div>
-<div>
-    <strong>Moedas de Ouro: </strong>@Model.MoedasOuro
-</div>
-
-<div>
-    <strong>Pontos de Vida: </strong>@Model.PontosVida
-</div>
-
-<div>
-    <strong>Pontos de Ataque:</strong>@Model.PontosAtaque
-</div>
-
-<div>
-    <strong>Pontos de Sorte: </strong>@Model.PontosSorte
-</div>
-
-<div>
-    <strong>Poções de Vida: </strong>@Model.PocoesVida
-</div>
-
-<div>
-    <strong>Chave?: </strong>@Model.Chave
-</div>
-<div class="text-right">
+<div class="botoes">
     <div>
         <a asp-action="" class="btn btn-primary" role="button">Avançar</a>
     </div>
