Imagem de Background e chars atualizada. Upload de imagem de uma sala com e sem monstro

--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -12,17 +12,17 @@
     <div class="form-group">
         <label>
             <input class="form-control" type="radio" asp-for="PerfilTipo" value="Nerd" checked>
-            <img src="~/images/NerdMiniatura.png">
+            <img src="~/images/Nerd-Char.png">
         </label>
 
         <label>
             <input class="form-control" type="radio" asp-for="PerfilTipo" value="Fat" checked>
-            <img src="~/images/FatMiniatura.png">
+            <img src="~/images/Fat-Char.png">
         </label>
 
         <label>
             <input class="form-control" type="radio" asp-for="PerfilTipo" value="Old" checked>
-            <img src="~/images/OldWomanMiniatura.png">
+            <img src="~/images/Old-Char.png">
         </label>
     </div>
     <div>
