--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -1,9 +1,9 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    background: url(../images/Entrance.jpg);
-    padding-top: 50px;
-    padding-bottom: 20px;
+    background: url(../images/Entrance.png);
+    padding-top: 40px;
+    padding-bottom: 10px;
     color: ghostwhite;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 14px;
