--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 40px;
+    padding-top: 60px;
     padding-bottom: 10px;
     color: ghostwhite;
     font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -131,3 +131,8 @@ input[type='radio'] {
     margin-top: 10px  
 }
 
+
+.validation-summary-errors {
+    font-weight: bold;
+    margin-top:20px;
+} 
