Alteraçoes  graficas, modelos e css

--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -10,15 +10,15 @@
             <input class="form-control" asp-for="Nome" />
         </div>
         <div class="form-group">
-                   <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick">
+                   <img src="~/images/Nerd-Char.png" alt="HTML5 Icon" class="charpick1">
                 <label>
                     <input class="form-control" type="radio" asp-for="PerfilTipo" value="Nerd" checked>O Nerd
                 </label>
-                    <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick">
+                    <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick2">
                 <label>
                     <input class="form-control" type="radio" asp-for="PerfilTipo" value="Fat" checked>O Gordo
                 </label>
-                    <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
+                    <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick3">
                 <label>
                     <input class="form-control" type="radio" asp-for="PerfilTipo" value="Old" checked>A velha louca
                 </label>
