--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -33,6 +33,10 @@
     <div>
         <strong>Chave?: </strong>@Model.Chave
     </div>
+
+    <div>
+        <strong>Sala </strong>@Model.Sala
+    </div>
 </div>
 
 <div class="botoes">
