--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -39,6 +39,11 @@
     </div>
 </div>
 
+<div class="areajogo">
+    <img src="~/images/Room1.jpg" alt="HTML5 Icon" class="areajogo" />
+</div>
+
+
 <div class="botoes">
     <div>
         <a asp-action="" class="btn btn-primary" role="button">Avançar</a>
