--- a/SetepassosPRJ/Views/Jogo/JogoMonstro.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoMonstro.cshtml
@@ -1,8 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model SetepassosPRJ.Models.Perfil
 @{
 }
+
 <div>
     <a asp-action="" class="btn btn-primary" role="button">Atacar</a>
     <a asp-action="" class="btn btn-primary" role="button">Fugir</a>
