--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -22,8 +22,6 @@ body {
    height: 260px;
 }
 
-
-
 label {
     color: ghostwhite;
     font-weight: bold;
@@ -122,9 +120,8 @@ input[type='radio'] {
 
 .botoes {
     display: inline-block;
-    margin-left: 600px;
-    vertical-align: top;
-    margin-top: 20px
+    margin-left: 120px;
+    margin-top: 20px;
 }
 
 
@@ -137,4 +134,12 @@ input[type='radio'] {
 .validation-summary-errors {
     font-weight: bold;
     margin-top:20px;
-} 
+}
+
+.areajogo {
+    width: 560px;
+    height: 360px;
+    display:inline-block;
+    margin-left: 50px;
+    
+}
