--- a/SetepassosPRJ/Views/Shared/_Layout.cshtml
+++ b/SetepassosPRJ/Views/Shared/_Layout.cshtml
@@ -44,8 +44,8 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
+        <footer class="footerdown">
+            <hr />
             <p>&copy; 2019 - SetepassosPRJ</p>
         </footer>
     </div>
