Alterada imagem de fundo para imagem normal. Alterado o logo "the simpsons" para imagem normal. Alteradas posições da imagem de fundo para ficar por baixo do logo, e do texto para ficar por cima de tudo.

--- a/SetepassosPRJ/Views/Shared/_Layout.cshtml
+++ b/SetepassosPRJ/Views/Shared/_Layout.cshtml
@@ -16,7 +16,13 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
-<body id="entrada">
+<body>
+    <div id="backg">
+        <img src="~/images/Layout/Entrance v1.png">
+    </div>
+    <div id="overlap">
+        <img src="~/images/Layout/simpsons logo.png">
+    </div>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
