--- a/SetepassosPRJ/Views/Home/Apresentacao.cshtml
+++ b/SetepassosPRJ/Views/Home/Apresentacao.cshtml
@@ -4,7 +4,7 @@
 
     <div class="container">
         <h1>
-            Equipa Capitain Mangi
+            Equipa Captain Mangi
         </h1>
         <br />
         <h5> Somos uma equipa de 3 elementos do 2º ano do curso de GSI. </h5>
