--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -8,6 +8,12 @@ body {
     font-size: 14px;
 }
 
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem; /* Footer height */
+}
 
 #backg {
     position: fixed;
