Alteraçoes botoes css

--- a/SetepassosPRJ/Views/Home/Index.cshtml
+++ b/SetepassosPRJ/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
 <h1>Do It!</h1>
 
 
-<a asp-controller="Jogo" asp-action="CriarJogo" class="btn btn-primary" role="button">Iniciar novo jogo</a>
+<a asp-controller="Jogo" asp-action="CriarJogo" class="BotaoIniciar"> <img src="smiley.gif" alt="HTML tutorial" >Botao</a>
     
