Alterados butoes iniciar jogo e jogar

--- a/SetepassosPRJ/Views/Home/Index.cshtml
+++ b/SetepassosPRJ/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 
-<h1>Do It!</h1>
 
 
-<a asp-controller="Jogo" asp-action="CriarJogo" class="BotaoIniciar"> <img src="smiley.gif" alt="HTML tutorial" >Botao</a>
+<a asp-controller="Jogo" asp-action="CriarJogo"><img src="~/images/btns/btn-iniciar.png" class="BotaoIniciar"/></a>
+
     
