--- a/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/CriarJogo.cshtml
@@ -16,21 +16,24 @@
                 </label>
                     <img src="~/images/Fat-Char.png" alt="HTML5 Icon" class="charpick">
                 <label>
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Fat" checked>O Gordo
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Fat">O Gordo
                 </label>
                     <img src="~/images/Old-Char.png" alt="HTML5 Icon" class="charpick">
                 <label>
-                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Old" checked>A velha louca
+                    <input class="form-control" type="radio" asp-for="PerfilTipo" value="Old">A velha louca
                 </label>
 
-
+                       
         </div>
 
-        <div>
-            <button type="submit" class="btn-primary" value="CriarJogo.teste">Iniciar Jogo</button>
-        </div>
+       <div>
+            <input type="image" src="~/images/btns/btn-jogar.png" value="CriarJogo" class="BotaoJogar"></input>
+       </div>
+
 
 
 </form>
+
+
 
 
