--- a/SetepassosPRJ/Views/Shared/_Layout.cshtml
+++ b/SetepassosPRJ/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer id="Footer">
+        <footer class="Footer">
             <p>&copy; 2019 - SetepassosPRJ</p>
         </footer>
     </div>
