--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -8,30 +8,23 @@ body {
     font-size: 14px;
 }
 
-#footer {
+.footer {
     position: absolute;
-    bottom: 0;
     width: 100%;
     height: 2.5rem; 
+    margin-bottom: 500px;
 }
 
-.BotaoIniciar {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    left: 50%;
-    top: 50%;
-    margin-left: -50px;
-    margin-top: -50px;
-    background: url(./images/but.png) no-repeat;
-    cursor: pointer;
-    border: none;
-    width: 100px;
-    height: 100px;
+
+.BotaoIniciar:hover {
+    height: 22%;
+    width: 22%;
+    filter: brightness(1.4);
+
 }
 
-.BotaoIniciar:active{
-    background: url(./images/but2.png) no-repeat;
+.BotaoJogar:hover {
+    filter: brightness(1.4);
 }
 
 
@@ -123,6 +116,8 @@ label {
     }
     */
 }
+
+
 
 input[type='radio'] {
     width: 25px;
