--- a/SetepassosPRJ/Views/Jogo/JogoMonstro.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoMonstro.cshtml
@@ -2,8 +2,14 @@
 @{
 }
 
+
+
 <div>
-    <a asp-action="" class="btn btn-primary" role="button">Atacar</a>
-    <a asp-action="" class="btn btn-primary" role="button">Fugir</a>
-    <a asp-action="" class="btn btn-primary" role="button">Beber Poção de Vida</a>
+    <img src="~/images/Rooms/Room1 monstro.png" alt="Falha a carregar imagem" class="areajogo" />
+</div>
+
+<div>
+    <a asp-action="" role="button"><img src="~/images/btns/btn-atacar.png" class="BotaoJogar" /></a>
+    <a asp-action="" role="button"><img src="~/images/btns/btn-fugir.png" class="BotaoJogar" /></a>
+    <a asp-action="" role="button"><img src="~/images/btns/btn-pocao.png" class="BotaoJogar" /></a>
 </div>
