--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -12,7 +12,7 @@ body {
     position: absolute;
     width: 100%;
     height: 2.5rem; 
-    margin-bottom: 500px;
+    margin-bottom: 30px;
 }
 
 
@@ -24,6 +24,15 @@ body {
 
 .BotaoJogar:hover {
     filter: brightness(1.4);
+}
+
+.icons {
+    position:relative;
+    height: auto;
+    width: auto;
+    max-width: 22%;
+    max-height: 22%;
+    display:inline-block;
 }
 
 
@@ -170,8 +179,9 @@ input[type='radio'] {
 }
 
 .botoes {
+    position:relative;
     display: inline-block;
-    margin-left: 120px;
+    margin-left: 125px;
     margin-top: 20px;
 }
 
@@ -188,10 +198,10 @@ input[type='radio'] {
 }
 
 .areajogo {
-    width: 560px;
-    height: 360px;
+    float:left;
+    position:relative;
+    width: 640px;
+    height: 520px;
     display:inline-block;
-    margin-left: 40px;
-    
-}
+ }
 
